--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "name": "generate-safe-id",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Universally unique and cryptographically unpredictable URL-safe identifiers",
-  "keywords": ["generate", "id", "ids", "unique", "identifier", "URL", "UUID"],
+  "keywords": [
+    "generate",
+    "id",
+    "ids",
+    "unique",
+    "identifier",
+    "URL",
+    "UUID"
+  ],
   "author": "Tim McLean",
   "repository": "github:timmclean/generate-safe-id",
   "license": "MIT",
